ready for deployement

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,13 +12,13 @@
 
             <p>Use this site to get you weather</p>
 
-            <form action="http://localhost:3000/weather" method="get" id="form0">
+            <form action="/weather" method="get" id="form0">
                 <input type="text" name="address" id="searchBox" placeholder="using submit button">
                 <button>Search</button>
             </form>
 
             <form id="form">
-                <input type="text" name="address" id="searchBox" placeholder="using fetch">
+                <input type="text" name="address" id="searchBox" placeholder="Kyoto">
                 <button>Search</button>
             </form>
 
